[feat] - fetch des produits - [fix] - decription overflow articles

--- a/client/src/styles/AdminArticlesCard.module.css
+++ b/client/src/styles/AdminArticlesCard.module.css
@@ -23,6 +23,20 @@
     min-height: 5rem;
     background-color: var(--background-secondary-color);
     color: var(--fontcolor-white);
+
+    figure {
+      height: 4rem;
+      width: 4rem;
+
+      img {
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+      }
+    }
+  }
+  .urgent {
+    color: var(--color-red);
   }
 
   .last {
@@ -37,6 +51,7 @@
       font-size: 40px;
       -webkit-box-shadow: 0px 0px 15px -5px #000000;
       box-shadow: 0px 0px 15px -5px #000000;
+      cursor: pointer;
     }
 
     .delete {
